--- a/web/newquery.html
+++ b/web/newquery.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Sefarad 2.0 | Add Query</title>
     <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
+    <link rel="icon" type="image/png" href="dist/img/favicon.png">
 
     <!-- Polymer: Load Polymer platform support before any code that touches the DOM. -->
     <script src="bower_components/webcomponentsjs/webcomponents.min.js"></script>
