--- a/web/query.html
+++ b/web/query.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Sefarad 2.0 | SPARQL Editor</title>
     <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
+    <link rel="icon" type="image/png" href="dist/img/favicon.png">
 
     <!-- ------------------------------- STYLE LINKS ZONE -------------------------------------- -->
 
