- Link title changed

--- a/web/dashboardPlaces.html
+++ b/web/dashboardPlaces.html
@@ -94,7 +94,7 @@
 
     <paper-shadow class="card" z="2"><header class="main-header">
         <!-- Logo -->
-        <a href="dashboard.html" class="logo"><b>TourPedia</b></a>
+        <a href="dashboardPlaces.html" class="logo"><b>TourPedia</b></a>
         <!-- Header Navbar: style can be found in header.less -->
         <nav class="navbar navbar-static-top" role="navigation">
             <!-- Sidebar toggle button-->
