--- a/web/dashboard.html
+++ b/web/dashboard.html
@@ -89,7 +89,7 @@
 
     <paper-shadow class="card" z="2"><header class="main-header">
         <!-- Logo -->
-        <a href="#" class="logo"><b>SmartOpenData</b></a>
+        <a href="dashboard.html" class="logo"><b>SmartOpenData</b></a>
         <!-- Header Navbar: style can be found in header.less -->
         <nav class="navbar navbar-static-top" role="navigation">
             <!-- Sidebar toggle button-->
