- Clear filters button added and working

--- a/web/dashboard.html
+++ b/web/dashboard.html
@@ -222,6 +222,7 @@
                 Dashboard
                 <small>Control panel</small>
             </h1>
+            <button class="btn colored" onclick="clearFilter()" id="btn-clear">Clear Filters</button>
             <ol class="breadcrumb">
                 <li><a href="#"> Home</a></li>
                 <li class="active"><i class="fa fa-pie-chart"></i> Dashboard</li>
