--- a/web/polymer-elements/heat-map/heat-map.html
+++ b/web/polymer-elements/heat-map/heat-map.html
@@ -28,6 +28,10 @@
                 //this.init();
             },
 
+            clearFilter: function () {
+                this.chart.filterAll();
+            },
+
             init: function () {
 
                 var pX = this.paramX;
