--- a/web/polymer-elements/bubble-chart/bubble-chart.html
+++ b/web/polymer-elements/bubble-chart/bubble-chart.html
@@ -27,7 +27,9 @@
                 //this.init();
             },
 
-
+            clearFilter: function () {
+                this.chart.filterAll();
+            },
 
             init: function () {
 
