--- a/web/polymer-elements/number-chart/number-chart.html
+++ b/web/polymer-elements/number-chart/number-chart.html
@@ -45,6 +45,10 @@
                 //this.init();
             },
 
+            clearFilter: function () {
+                this.chart.filterAll();
+            },
+
             init: function () {
 
                 var p = this.param;
