--- a/web/polymer-elements/pie-chart/pie-chart.html
+++ b/web/polymer-elements/pie-chart/pie-chart.html
@@ -34,6 +34,10 @@
                 }
             },
 
+            clearFilter: function () {
+                this.chart.filterAll();
+            },
+
             init: function () {
 
                 var p = this.param;
