--- a/web/polymer-elements/row-chart/row-chart.html
+++ b/web/polymer-elements/row-chart/row-chart.html
@@ -27,6 +27,10 @@
                 //this.init();
             },
 
+            clearFilter: function () {
+                this.chart.filterAll();
+            },
+
             init: function () {
 
                 var p = this.param;
